[workspace]
members = [
    "justicar",
    "crates/*"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
pink-json = { version = "0.4", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
chrono = { version = "0.4.38" }
const-oid = { version = "0.9.5", default-features = false }
x509-cert = { version = "0.2.4", default-features = false }
byteorder = { version = "1.5.0", default-features = false }
pem = { version = "3", default-features = false }
asn1_der = { version = "0.7", default-features = false, features = [
    "native_types",
] }
der = { version = "0.7.8", default-features = false, features = ["alloc"] }

log = { version = "0.4.20", default-features = false }

anyhow = { version = "1" }

ring = { version = "0.16.20",default-features = false, features = [
    "alloc",
] }
reqwest = { version = "0.11.27",default-features = false, features = [
    "rustls-tls",
    "blocking",
    "hickory-dns",
] }
urlencoding = { version = "2" }
serde_json = { version = "1.0.108",features = [
    "preserve_order",
] }
tracing = { version = "0.1" }
tokio ={ version = "1.38.0" }


webpki = { git = "https://github.com/rustls/webpki", version = "=0.102.0-alpha.3", package = "rustls-webpki", default-features = false, features = [
    "alloc",
    "ring",
], rev = "2ed9a4324f48c2c46ffdd7dc9d3eb315af25fce2" }


##Local Crates
sgx-attestation = { path = "crates/sgx-attestation" }
ethers-contract = { path = "crates/ethers-contract" }