[package]
name = "justicar"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx-attestation = { workspace = true }
contract-eth = { workspace = true}
handover = { workspace = true}
hex = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true}
anyhow = { workspace = true}
axum = {workspace = true}