[package]
name = "justicar"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx-attestation = { workspace = true }
eth = { workspace = true,default-features = true}
handover = { workspace = true}
hex = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true}
anyhow = { workspace = true}
axum = {workspace = true}
async-trait = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
secp256k1 = {workspace = true}
rand = {workspace = true}
bip39 = {workspace = true,features = ["std","rand"]}
alloy = {workspace = true}